# playground

./: .gitignore  LICENSE  README.md  hello.py  pyproject.toml  requirements.txt
chat/: deepseek.py  gpt.py  settings.py
game/: space.py
src/: logging_config.py
src/chat/: deepseek.py  gpt.py  settings.py
src/game/: space.py
