[project]
name = "playground"
version = "0.1.0"
description = "My ideas but in code"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Ankush Tyagi", email = "tyagi.ankush94@gmail.com" }
]
license = { file = "LICENSE" }

dependencies = [
    "docx2txt>0.0.1",
    "langchain>=0.3.17",
    "langchain-community>=0.3.16",
    "langchain-experimental>=0.3.4",
    "langchain-huggingface>=0.1.2",
    "langchain-ollama>=0.2.3",
    "openai>=1.61.0",
    "open-text-embeddings>=1.0.4",
    "pdfplumber>=0.11.5",
    "prompt-template>=1.1.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "ruff>=0.9.4",
    "semantic-chunkers>=0.0.10",
    "sentence-transformers>=3.4.1",
    "streamlit>=1.41.1",
    "watchdog>=6.0.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
docstring-code-line-length = 20

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "SIM", # flake8-simplify
    "I",  # isort
]
ignore = ["F401"]
fixable = ["ALL"]
unfixable = ["F401"]
