[project]
name = "playground"
version = "0.1.0"
description = "My ideas but in code"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Ankush Tyagi", email = "tyagi.ankush94@gmail.com" }
]
license = { file = "LICENSE" }

dependencies = [
    "black>=23.7.0",
    "docx2txt>=0.8",
    "faiss-cpu>=1.7.4",
    "isort>=5.12.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-core>=0.1.0",
    "langchain-experimental>=0.0.10",
    "langchain-huggingface>=0.0.10",
    "langchain-ollama>=0.0.10",
    "mypy>=1.5.1",
    "openai>=1.12.0",
    "pdfplumber>=0.10.3",
    "pylint>=2.17.0",
    "pytest>=7.4.0",
    "python-json-logger>=2.0.7",
    "python-magic>=0.4.27",
    "pytesseract>=0.3.10",
    "sentence-transformers>=2.2.2",
    "streamlit>=1.32.0",
    "tqdm>=4.66.1",
    "unstructured>=0.10.30",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
docstring-code-line-length = 20

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "SIM", # flake8-simplify
    "I",  # isort
]
ignore = ["F401"]
fixable = ["ALL"]
unfixable = ["F401"]
